--- a/front/src/app/core/sidebar/sidebar.component.html
+++ b/front/src/app/core/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
             class="p-button-outlined p-button-info"></button>
         <button [routerLink]="'/branches'" pButton pRipple type="button" label="Branch"
             class="p-button-outlined p-button-info"></button>
-        <button [routerLink]="'/exchange-list'" pButton pRipple type="button" icon="pi pi-money-bill" label="Exchange"
+        <button [routerLink]="'/exchange-list'" pButton pRipple type="button" icon="pi pi-money-bill" label="Exchange Rates"
             class="p-button-outlined p-button-info"></button>
         <p-button *ngIf="role == 'ADMIN'" [routerLink]="'/workers'" label="Workers" icon="pi pi-users"
             styleClass="p-button-outlined" badgeClass="p-badge-danger"></p-button>
@@ -50,7 +50,7 @@
             class="p-button-outlined p-button-info"></button>
         <button [routerLink]="'/branches'" pButton pRipple type="button" label="Branch"
             class="p-button-outlined p-button-info"></button>
-        <button [routerLink]="'/exchange-list'" pButton pRipple type="button" icon="pi pi-money-bill" label="Exchange"
+        <button [routerLink]="'/exchange-list'" pButton pRipple type="button" icon="pi pi-money-bill" label="Exchange Rates"
             class="p-button-outlined p-button-info"></button>
         <p-button *ngIf="role == 'ADMIN'" [routerLink]="'/workers'" label="Workers" icon="pi pi-users"
             styleClass="p-button-outlined" badgeClass="p-badge-danger"></p-button>
