--- a/front/src/app/user/admin/add-worker/add-worker.component.html
+++ b/front/src/app/user/admin/add-worker/add-worker.component.html
@@ -2,15 +2,20 @@
 <p-card class="center-div margin-4em" header="Add New Worker" [style]="{'width': '25rem', 'margin-bottom': '2em'}">
     <form [formGroup]="addWorkerForm" class="center-div" style="flex-direction:column;">
         <span class="p-float-label">
-            <input id="float-input" type="text" pInputText formControlName="username"> 
+            <p-dropdown id="float-input" [options]="branches" formControlName="branch"
+                placeholder="Select a Branch"></p-dropdown>
+            <label for="float-input">Branch</label>
+        </span>
+        <span class="p-float-label">
+            <input id="float-input" type="text" pInputText formControlName="username">
             <label for="float-input">Username</label>
         </span>
         <span class="p-float-label">
-            <input id="float-input" type="password" pInputText formControlName="password"> 
+            <input id="float-input" type="password" pInputText formControlName="password">
             <label for="float-input">Password</label>
         </span>
         <span class="p-float-label">
-            <input id="float-input" type="email" pInputText formControlName="email"> 
+            <input id="float-input" type="email" pInputText formControlName="email">
             <label for="float-input">Email</label>
         </span>
         <span class="p-float-label">
@@ -18,15 +23,15 @@
             <label for="float-input">Birthday</label>
         </span>
         <span class="p-float-label">
-            <input id="float-input" type="text" pInputText formControlName="firstname"> 
+            <input id="float-input" type="text" pInputText formControlName="firstname">
             <label for="float-input">First Name</label>
         </span>
         <span class="p-float-label">
-            <input id="float-input" type="text" pInputText formControlName="lastname"> 
+            <input id="float-input" type="text" pInputText formControlName="lastname">
             <label for="float-input">Last Name</label>
         </span>
         <span class="p-float-label">
-            <input id="float-input" type="text" pInputText formControlName="address"> 
+            <input id="float-input" type="text" pInputText formControlName="address">
             <label for="float-input">Address</label>
         </span>
         <button pButton type="button" label="Add Worker" [loading]="isLoading" (click)="addWorker()"></button>
