--- a/front/src/app/user/admin/create-exchange-rates/create-exchange-rates.component.html
+++ b/front/src/app/user/admin/create-exchange-rates/create-exchange-rates.component.html
@@ -2,32 +2,32 @@
 <div class="table-container">
     <p-table [value]="exchangeRates.rates" [tableStyle]="{ 'margin-top': '50px' }">
         <ng-template pTemplate="header">
-        <tr>
-            <th>Currency</th>
-            <th>Rate</th>
-            <th></th>
-        </tr>
+            <tr>
+                <th>Currency</th>
+                <th>Rate</th>
+                <th></th>
+            </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rate let-i="rowIndex">
-        <tr>
-            <td>{{ rate.currency }}</td>
-            <td>{{ rate.rate }}</td>
-            <td>
-            <button pButton type="button" icon="pi pi-trash" (click)="deleteRate(i)"></button>
-            </td>
-        </tr>
+            <tr>
+                <td>{{ rate.currency }}</td>
+                <td>{{ rate.rate }}</td>
+                <td>
+                    <button pButton type="button" icon="pi pi-trash" (click)="deleteRate(i)"></button>
+                </td>
+            </tr>
         </ng-template>
         <ng-template pTemplate="footer">
-        <tr>
-            <td><input type="text" pInputText [(ngModel)]="newRate.currency" /></td>
-            <td><input type="number" pInputText [(ngModel)]="newRate.rate" /></td>
-            <td>
-            <button pButton type="button" icon="pi pi-plus" (click)="addRate()"></button>
-            </td>
-        </tr>
+            <tr>
+                <td><input type="text" pInputText [(ngModel)]="currencyInput" maxlength="3" /></td>
+                <td><input type="number" pInputText [(ngModel)]="newRate.rate" /></td>
+                <td>
+                    <button pButton type="button" icon="pi pi-plus" (click)="addRate()"></button>
+                </td>
+            </tr>
         </ng-template>
     </p-table>
-  <div class="button-container">
-    <button pButton type="button" label="Add Exchange Rates" [loading]="isLoading" (click)="createRates()"></button>
-  </div>
+    <div class="button-container">
+        <button pButton type="button" label="Add Exchange Rates" [loading]="isLoading" (click)="createRates()"></button>
+    </div>
 </div>
